# pod-autoscaling

./: .gitignore  Dockerfile  export.py  go.mod  go.sum  k6.Dockerfile  k6.js  main.go  pyproject.toml
data/: api_request_duration_seconds_bucket.csv  api_request_duration_seconds_bucket.json  api_request_duration_seconds_count.csv  api_request_duration_seconds_count.json  api_request_duration_seconds_sum.csv  api_request_duration_seconds_sum.json  api_request_size_bytes_bucket.csv  api_request_size_bytes_bucket.json  api_request_size_bytes_count.csv  api_request_size_bytes_count.json  api_request_size_bytes_sum.csv  api_request_size_bytes_sum.json  api_requests_total.csv  api_requests_total.json  api_response_size_bytes_bucket.csv  api_response_size_bytes_bucket.json  api_response_size_bytes_count.csv  api_response_size_bytes_count.json  api_response_size_bytes_sum.csv  api_response_size_bytes_sum.json  container_blkio_device_usage_total.csv  container_blkio_device_usage_total.json  container_cpu_cfs_periods_total.csv  container_cpu_cfs_periods_total.json  container_cpu_cfs_throttled_periods_total.csv  container_cpu_cfs_throttled_periods_total.json  container_cpu_cfs_throttled_seconds_total.csv  container_cpu_cfs_throttled_seconds_total.json  container_cpu_system_seconds_total.csv  container_cpu_system_seconds_total.json  container_cpu_usage_seconds_total.csv  container_cpu_usage_seconds_total.json  container_cpu_user_seconds_total.csv  container_cpu_user_seconds_total.json  container_file_descriptors.csv  container_file_descriptors.json  container_fs_inodes_free.csv  (+95 more)
(+1154 files in other folders)
