[tool.poetry]
name = "pod-autoscaling"
version = "0.1.0"
description = ""
authors = ["trif0lium <gh@fleeingsunlight.dev>"]

[tool.poetry.dependencies]
python = "~3.9"
scipy = "^1.8.0"
pandas = "^1.4.2"
statsmodels = "^0.13.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
